--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
         <title>Download Excursion</title>
         <body>
             <h1>Discover hidden places in the world around you</h1>
-            <a href="./index.html">Download Excursion (Coming soon!)</a> 
+            <a href="./index.html">Download Excursion (Coming soon!)</a>
+            <br><br>
+            <video src="./resources/videos/excursion.mp4" autoplay muted loop>Video not supported</video>
+            <section>
+                <h2>Your personal travel guide</h2>
+                <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+                <img src="./resources/images/camp.webp">
+                <br><br>
+                <img src="./resources/images/phone.webp">
+                <h2>Coming Soon for iPhone and Android</h2>
+                <a href="./index.html">Download Excursion (Coming soon!)</a>
+            </section>
+            <footer>
+                <p id="copyright">© Excursion</p>
+            </footer>
         </body>
     </head>
 </html>
